fix up flex box on safari

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,12 +60,12 @@ ul {
 
 #supply ul li {
   flex: 1;
+  -webkit-flex: 1 1 17%;
   max-width: 21%;
   min-width: 17%;
 }
 
 #supply ul#kingdom li {
-  flex: 1;
   min-width: 21%;
 }
 
